# murmur

./: ARCHITECTURE.md  PLAN.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
design-assets/logo/murmur-dev-mono/: murmur-logo-dev-mono-readme.md
src/: App.tsx  main.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: audio.rs  history.rs  mod.rs  models.rs  overlay.rs  settings.rs  transcription.rs
src-tauri/src/domain/: app_error.rs  mod.rs  model_manifest.rs  transcription_history.rs  transcription_result.rs
src-tauri/src/services/: app_paths.rs  audio_convert.rs  cleanup_service.rs  downloader.rs  mod.rs  model_manager.rs  transcription_store.rs  whisper_service.rs
src-tauri/src/state/: app_state.rs
src/components/ui/: alert-dialog.tsx  button.tsx  sonner.tsx
src/context/: app-state.tsx
src/context/hooks/: download-progress-state.test.ts  download-progress-state.ts  use-app-bootstrap.ts  use-browser-audio-inputs.ts  use-transcription-actions.ts
src/context/lib/: auto-paste-guard.test.ts  auto-paste-guard.ts
src/context/types/: app-state.ts
src/features/cleanup/hooks/: use-cleanup-page-logic.ts
src/features/models/components/: model-section-card.tsx
src/features/models/hooks/: use-model-connectivity.ts
src/features/models/lib/: lab-order.ts  model-actions.ts  model-view-state.ts
src/features/settings/hooks/: use-settings-page-logic.test.ts  use-settings-page-logic.ts
src/features/settings/lib/: settings-updaters.ts
src/features/transcription/cleanup/: pipeline.ts  rules.ts  types.ts
src/features/transcription/hooks/: use-home-actions.ts  (+1 more)
src/lib/: toast.test.ts  toast.ts
src/lib/api/: tauri.ts
src/lib/export/: save-transcript.ts
src/lib/runtime/: tauri.smoke.test.ts  tauri.ts
src/lib/types/: export.ts  history.ts  models.ts  settings.ts  transcription.ts
src/pages/: CleanupPage.tsx  HistoryPage.tsx  HomePage.tsx  ModelsPage.tsx  OverlayPage.test.tsx  OverlayPage.tsx  SettingsPage.tsx
src/routes/: router.integration.smoke.test.tsx  router.smoke.test.ts  router.tsx
(+2 files in other folders)
